# hortense

./: .gitattributes  .gitignore  LICENSE  README.md  THREAT_MODEL.md  pyproject.toml
configs/: signatures.yml  trusted_catalog.seed.yml
docs/img/: README.md
docs/img/assets/: hortense logo.txt
native/hortense-core/: Cargo.toml
native/hortense-core/src/: event.rs  lib.rs
native/hortense-core/src/win32/: authenticode.rs  display_affinity.rs  interview.rs  microphone.rs  mod.rs  network.rs  overlay.rs  process.rs  relay.rs  util.rs
scripts/: build_exe.ps1
src/hortense/: __init__.py  catalog.py  cli.py  config.py  daemon.py  entity.py  entity_lifecycle.py  human_reporter.py  impersonation.py  models.py  relay_lifecycle.py  reporters.py  scanner.py  watch_dashboard.py  watch_state.py  watch_tui.py
tests/: test_catalog.py  test_config.py  test_daemon.py  test_entity.py  test_human_reporter.py  test_impersonation.py  test_models.py  test_relay_lifecycle.py  test_scanner.py  test_watch_dashboard.py  test_watch_tui.py
